fix featured projects high contrast color

--- a/src/components/FeaturedProjects/FeaturedProjects.module.css
+++ b/src/components/FeaturedProjects/FeaturedProjects.module.css
@@ -31,7 +31,7 @@
   }
 
 	@media (prefers-contrast: more) {
-		--text: rgb(var(--color-ter-rgb));
+		--text: #FECD61;
 	}
 }
 
